--- a/src/components/component.css
+++ b/src/components/component.css
@@ -127,8 +127,8 @@ p a { text-decoration: underline; }
   }
   .searchline .ant-input { background: transparent !important; }
   .searchline .ant-btn {
-    margin-top: 3px;
-    margin-right: 3px;
+    margin: 3px;
+    margin-left: 0;
     border-radius: 100px !important;
     font-size: 22px !important;
     height: 54px !important;
