--- a/src/getReview/GetReview.css
+++ b/src/getReview/GetReview.css
@@ -34,7 +34,7 @@
 }
 
 .panel {
-  background: #56C5D8;
+  background: #56C5D8 100% 0 no-repeat;
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
@@ -47,9 +47,26 @@
 }
 @media screen and (min-width: 1024px) {
   .panel {
+    margin-bottom: 10%;
     padding: 5% 8%;
-    -webkit-background-size: cover;
-    background-size: cover;
+    background-image: url('../bg.png');
+    -webkit-background-size: 50% auto;
+    background-size: 50% auto;
+    position: relative;
+  }
+  .panel:after {
+    content: '';
+    position: absolute;
+    left: 0;
+    bottom: 5px;
+    width: 100%;
+    height: 90px;
+    background: url('../shadow.png') 50% 0 no-repeat;
+    transform: translateY(100%);
+    -webkit-background-size: 100% auto;
+    background-size: 100% auto;
+    opacity: 0.5;
+    z-index: -1;
   }
 }
 .panel a {
