--- a/src/getReview/GetReview.css
+++ b/src/getReview/GetReview.css
@@ -13,61 +13,71 @@
 
 .desktop {
   width: 90%;
-  max-width: 960px;
+  max-width: 800px;
   margin: auto;
-  /*background: #fff; */
+  background: #025CAA;
   /*border-radius: 10px; overflow: hidden;*/
   /*box-shadow: 2px 2px 2px rgba(0,0,0,.4)*/
 }
-
-.logoline {
-  padding: 70px 0 30px;
-  text-align: center;
-}
-.logoline img {
-  max-width: 64%;
-}
-@media screen and (max-width: 1023px) {
-  .logoline {
-    padding-bottom: 50px;
+@media screen and (min-width: 1024px) {
+  .desktop {
+    position: relative;
+    border-radius: 70px !important;
+  }
+  .desktop:before {
+    content: '';
+    display: block;
+    position: absolute;
+    left: -12px;
+    right: -12px;
+    top: -12px;
+    bottom: -12px;
+    z-index: -1;
+    background: #666262 linear-gradient(45deg, #6E6A6B, #ebebeb, #6E6A6B, #ebebeb, #6E6A6B);
+    background: #666262 conic-gradient(from 0.95turn, #EBEBEB, #6E6A6B, #D8D9D9, #676363, #EEEEEE, #979596, #FDFDFD, #858384, #FFF, #959394, #EBEBEB);
+    border-radius: 81px !important;
+  }
+  .panel {
+    border-radius: 70px;
+    border-top-left-radius: 0;
+    border-top-right-radius: 0;
+    overflow: hidden;
   }
 }
 
+.logoline {
+  padding: 70px 0 50px;
+  text-align: center;
+}
+.logoline img {
+  width: 130px;
+  max-width: 28%;
+}
+@media screen and (max-width: 1023px) {
+  .logoline { padding-bottom: 50px; }
+}
+
 .panel {
-  background: #56C5D8 100% 0 no-repeat;
+  background: #1495D3;
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
 }
+@media screen and (max-width: 767px) {
+  .panel {
+    padding: 30px 10%;
+    margin-left: calc(50% - 50vw);
+    margin-right: calc(50% - 50vw);
+  }
+}
 @media screen and (min-width: 768px) and (max-width: 1023px) {
   .panel {
-    max-width: 632px;
+    max-width: 800px;
     margin: 0 auto;
   }
 }
-@media screen and (min-width: 1024px) {
-  .panel {
-    margin-bottom: 10%;
-    padding: 5% 8%;
-    background-image: url('../bg.png');
-    -webkit-background-size: 50% auto;
-    background-size: 50% auto;
-    position: relative;
-  }
-  .panel:after {
-    content: '';
-    position: absolute;
-    left: 0;
-    bottom: 5px;
-    width: 100%;
-    height: 90px;
-    background: url('../shadow.png') 50% 0 no-repeat;
-    transform: translateY(100%);
-    -webkit-background-size: 100% auto;
-    background-size: 100% auto;
-    opacity: 0.5;
-    z-index: -1;
-  }
+@media screen and (min-width: 768px) {
+  .panel .ant-card { padding: 5% 12%; }
 }
 .panel a {
   color: inherit;
@@ -103,25 +113,31 @@
 
 .toptitle {
   width: 100%;
-  margin-bottom: 5%;
+  margin-bottom: 4%;
 }
 
 .toptitle h1 {
   margin: 0;
   color: #fff;
+  font-family: 'Dancing Script', cursive;
   font-size: 24px;
-  font-weight: 300;
+  font-weight: 400;
   line-height: 1.2;
   text-align: center;
 }
-@media screen and (min-width: 600px) {
-  .toptitle h1 { font-size: 32px; }
+@media screen and (min-width: 420px) {
+  .toptitle h1 { font-size: 30px; }
 }
-@media screen and (min-width: 768px) {
-  .toptitle h1 { font-size: 37px; }
+@media screen and (min-width: 540px) {
+  .toptitle h1 { font-size: 34px; }
+}
+@media screen and (min-width: 640px) {
+  .toptitle h1 { font-size: 42px; }
+}
+@media screen and (min-width: 1024px) {
+  .toptitle h1 { font-size: 58px; }
 }
 .tablist {
-  margin-bottom: 5%;
   text-align: center;
   scrollbar-width: none;
   -ms-overflow-style: -ms-autohiding-scrollbar;
@@ -132,12 +148,15 @@
   padding: 19px 10px 17px 18px;
   font-size: 16px;
   font-weight: 600;
-  color: #56C5D8;
+  color: #1495D3;
   background: #fff;
 }
 .activeTab {
   color: #fff;
   background: #D44F7C;
+}
+@media screen and (max-width: 767px) {
+  .tablist { margin-bottom: 5%; }
 }
 @media screen and (max-width: 767px) {
   .tabunit {
@@ -156,6 +175,7 @@
     display: -ms-flex;
     display: -o-flex;
     display: flex;
+    background: #E3E2E2;
   }
   .tabunit {
     display: inline-block;
